# pydashboard

./: README.md  app.py  demo.py  demo4.py  main.py  pyproject.toml
examples/: buttons.py  chips.py  demo.py  demo1.py  table.py
src/pydashboard/: app.py  dashboard.py  datatable.py  job.py  models.py  servertable.py  table.py  theme.py  utils.py
src/pydashboard/components/: button.py  button_group.py  chip.py  dialog.py  icon.py  list.py  pagination.py
src/pydashboard/layout/: cell.py  frame.py
src/pydashboard/style/: __init__.py  border.py  color.py  size.py  variant.py
tests/: demo.py  demo2.py  demo3.py  test.py
tools/: format.py
