[project]
name = "pydashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pyqt6>=6.10.0",
    "qtawesome>=1.4.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.12.0",
    "dos2unix>=1",
    "isort>=7.0.0",
    "pyinstaller>=6.17.0",
    "termcolor>=3.3.0",
]

[tool.pylint]
disable = [
    "missing-class-docstring",
    'missing-class-docstring',
    'missing-module-docstring',
    'missing-function-docstring',
    'too-few-public-methods',
]

[tool.isort]
profile = "black"
